--- a/src/blog/templates/blog/index.html
+++ b/src/blog/templates/blog/index.html
@@ -4,7 +4,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="{% static 'css/style.css' %}">
+        <link rel="stylesheet" href="{% static 'css/main.css' %}">
         
     
     </head>
