--- a/src/blog/templates/blog/index.html
+++ b/src/blog/templates/blog/index.html
@@ -4,15 +4,22 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="{% static 'css/main.css' %}">
+        <meta name="viewport" content="width=divice-width, initial-scale=1, shrink-to-fit=no">
+        <link rel="stylesheet" href="{% static 'blog/css/bootstrap.min.css' %}">
+        <link rel="stylesheet" href="{% static 'blog/css/main.css' %}">
+        <link rel="shortcut icon" href="{% static 'blog\images\i2.ico' %}">
         
     
     </head>
     <body>
         <div>
-
+            <i class="fa-solid fa-house"></i>
             Hello
         </div>
+        <script src="{% static 'blog/js/jquery-3.3.1.slim.min.js' %}"></script>
+        <script src="{% static 'blog/js/popper.min.js' %}"></script>
+        <script src="{% static 'blog/js/bootstrap.min.js' %}"></script>
+        <script src="{% static 'blog/js/fontawsome-all.min.js' %}"></script>
     </body>
 
 </html>
