--- a/src/blog/templates/blog/index.html
+++ b/src/blog/templates/blog/index.html
@@ -61,10 +61,56 @@
               <!--End navbar-->
         </header>
 
+        <section>
+            <div class="container">
+                <div class="row mt-4">
+                    <div class="col-md-8">paylaşımlar</div>
+                    <div class="col-md-4">
+                        <div class="card mb-3 ">
+                            <h3 class="text-center bg-secondary text-light p-2">son paylaşım</h3>
+                            <ul>
+                                <li>
+                                    <a href="#">ilk paylaşım</a>
+                                </li>
+                                <li>
+                                    <a href="#">ikinci paylaşım</a>
+                                </li>
+                                <li>
+                                    <a href="#">üçüncü paylaşım</a>
+                                </li>
+                                <li>
+                                    <a href="#">dörtüncü paylaşım</a>
+                                </li>
+                            </ul>
+                        </div> 
+                        <div class="card mb-3" >
+                            <h3 class="text-center bg-secondary text-light p-2">son yorumlar</h3>
+                            <ul>
+                                <li>
+                                    <a href="#">ilk yorum</a>
+                                </li>
+                                <li>
+                                    <a href="#">ikinci yorum</a>
+                                </li>
+                                <li>
+                                    <a href="#">üçüncü yorum</a>
+                                </li>
+                                <li>
+                                    <a href="#">dörtüncü yorum</a>
+                                </li>
+                            </ul>
+                        </div> 
+
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
         
         <div>
-            <i class="fa-solid fa-house"></i>
-            -------
+            
         </div>
         <script src="{% static 'blog/js/jquery-3.3.1.slim.min.js' %}"></script>
         <script src="{% static 'blog/js/popper.min.js' %}"></script>
