--- a/src/blog/templates/blog/index.html
+++ b/src/blog/templates/blog/index.html
@@ -13,52 +13,58 @@
     </head>
     <body>
         <header>
-            <!--start navbar-->
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <div class="container-fluid">
-                    <img src="{% static 'blog\images\i2.ico' %}" alt="logo" width="45px">
-                  <a class="navbar-brand" href="#">Blog</a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                      <li class="nav-item">
-                          
-                        <a class="nav-link active" aria-current="page" href="#" >
-                            
-                            Anasyfa</a>
-                        
-                      </li>
-                      
-                      <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          kurslar
+            <!--Start Navbar-->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">
+                <img src="{% static 'blog\images\i2.ico' %}" alt="logo" width="30px">
+                Blog</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="">Anasayfa <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Kurslar
                         </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                          <li><a class="dropdown-item" href="#">python</a></li>
-                          <li><a class="dropdown-item" href="#">Django</a></li>
-                          <li><hr class="dropdown-divider"></li>
-                          <li><a class="dropdown-item" href="#">c++</a></li>
-                        </ul>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">Hakkında</a>
-                      </li>
-                     
-                    </ul>
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link disabled ">Giriş yap</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled">kayıt ol</a>
-                        </li>
-                    </ul>
-                  </div>
-                </div>
-              </nav>
-              <!--End navbar-->
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item"
+                                href="https://www.youtube.com/">python</a>
+                            <a class="dropdown-item"
+                                href="https://www.youtube.com/">Django</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item"
+                                href="https://www.youtube.com/">c++</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="">Hakkında</a>
+                    </li>
+                </ul>
+
+                {% if user.is_authenticated %}
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item"><a class="nav-link" href="">yeni paylaşım</a></li>
+                    <li class="nav-item"><a class="nav-link" href=""> profil</a></li>
+                    <li class="nav-item"><a class="nav-link" href="">çıkış yap </a></li>
+                </ul>
+                {% else %}
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item"><a class="nav-link" href="">Giriş yap </a></li>
+                    <li class="nav-item"><a class="nav-link" href="">Kayıt yap</a></li>
+                </ul>
+                {% endif %}
+
+
+            </div>
+        </nav>
+        <!--End Navbar-->
         </header>
 
         <section>
@@ -107,6 +113,55 @@
                 </div>
             </div>
         </section>
+
+        <footer class="bg-secondary">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md">
+                        <div class="card-group mt-3">
+                            <div class="card m-3">
+                                <h3 class="card-title text-center border-bottom p-2 m-3">Hakkında</h3>
+                                <div class="card-body">
+                                    <div class="text-center">
+                                        <img src="{% static 'blog\images\i2.ico' %}" alt="logo" width="50px">
+                                    </div>
+                                    <p class="text-center" >
+                                        asd ddfgh gjh jjk klş lşi
+                                    </p>
+    
+                                </div>
+                            </div>
+                            <div class="card m-3">
+                                <h3 class="card-title text-center border-bottom p-2 m-3 color-black" >Önemli linkler</h3>
+                                <div class="card-body">
+                                    <ul>
+                                        <li><a class="text-dark" href="https://www.python.org/doc/">python</a></li>
+                                        <li><a class="text-dark" href="https://.....com/">Django</a></li>
+                                        <li><a class="text-dark" href="https://........org/">c++</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="card m-3">
+                                <h3 class="card-title text-center border-bottom p-2 m-3">sosyal medya</h3>
+                                <h4 class="card-body text-center">
+                                    <a class="text-secondary" href=""><i class="fab fa-facebook"></i></a>
+                                    <a class="text-secondary" href=""><i class="fab fa-twitter"></i></a>
+                                    <a class="text-secondary" href=""><i class="fab fa-instagram"></i></a>
+                                    <a class="text-secondary" href=""><i class="fab fa-youtube"></i></a>
+                                    <a class="text-secondary" href=""><i class="fab fa-telegram"></i></a>
+                                    <a class="text-secondary" href=""><i class="fab fa-linkedin"></i></a>
+                                </h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row p-2">
+                    <div class="col-md text-center">
+                        <small class="text-light">&copy; جميع الحقوق محفوظة {% now 'Y' %}</small>
+                    </div>
+                </div>
+            </div>
+        </footer>
 
         
         <div>
