--- a/src/blog/static/blog/css/main.css
+++ b/src/blog/static/blog/css/main.css
@@ -1,19 +1,16 @@
 div
 {
-    color: green;
+   
 
 }
 html, body{
-    direction: rtl;
-    text-align: right;
+    direction: ltr;
+    text-align: left;
 }
 
-body{
-    font-family: 'Tajawal', sans-serif;
-}
 
 .dropdown-menu .dropdown-item{
-    text-align: right;
+    text-align: left;
 }
 
 .bg-secondary{
