--- a/src/blog/templates/blog/index.html
+++ b/src/blog/templates/blog/index.html
@@ -1,4 +1,12 @@
+
 {% extends 'blog/base.html' %}
 {% block content %}
-<h1>...</h1>                   
+{% for post in posts%}
+<div class="post p-3 mp-4">
+    <img class= "img-fluid rounded-circle border m-2" width="70" src="" alt="üye resmi">
+    <span>{{post.post_date}} tarihinde paylaşıldı</span>
+    <h3><a href="">{{post.title}}</a></h3>
+    <p>{{post.content}}</p>
+</div>
+{% endfor %}                 
 {% endblock content %}
