--- a/src/blog/templates/blog/base.html
+++ b/src/blog/templates/blog/base.html
@@ -85,20 +85,7 @@
                     <div class="col-md-4">
                         <div class="card mb-3 ">
                             <h3 class="text-center bg-secondary text-light p-2">son paylaşım</h3>
-                            <ul>
-                                <li>
-                                    <a href="#">ilk paylaşım</a>
-                                </li>
-                                <li>
-                                    <a href="#">ikinci paylaşım</a>
-                                </li>
-                                <li>
-                                    <a href="#">üçüncü paylaşım</a>
-                                </li>
-                                <li>
-                                    <a href="#">dörtüncü paylaşım</a>
-                                </li>
-                            </ul>
+                            {% include 'blog/latest_posts.html' %}
                         </div> 
                         <div class="card mb-3" >
                             <h3 class="text-center bg-secondary text-light p-2">son yorumlar</h3>
