--- a/src/blog/templates/blog/index.html
+++ b/src/blog/templates/blog/index.html
@@ -3,9 +3,9 @@
 {% block content %}
 {% for post in posts%}
 <div class="post p-3 m-2">
-    <img class= "img-fluid rounded-circle border m-2" width="70" src="" alt="üye resmi">
-    <span>{{post.post_date}} tarihinde paylaşıldı</span>
-    <h3><a href="">{{post.title}}</a></h3>
+    <img class= "img-fluid rounded-circle border m-2" width="70" src="resim.png" alt="resim">
+    <span style="color:gray ; font-size: small; " >{{post.post_date|date:'d/m/Y'}} Tarihinde paylaştı.</span>
+    <h3><a class="text-dark" href="{% url 'detail' post.id %}">{{post.title}}</a></h3>
     <p>{{post.content}}</p>
 </div>
 {% endfor %}                 
