--- a/src/blog/templates/blog/index.html
+++ b/src/blog/templates/blog/index.html
@@ -1,10 +1,29 @@
-
 {% extends 'blog/base.html' %}
 {% block content %}
-{% for post in posts%}
-<div class="post p-3 m-2">
-    <img class= "img-fluid rounded-circle border m-2" width="70" src="resim.png" alt="resim">
-    <span style="color:gray ; font-size: small; " >{{post.post_date|date:'d/m/Y'}} Tarihinde paylaştı.</span>
+<div > 
+    <script type="text/javascript">
+        baseUrl = "https://widgets.cryptocompare.com/";
+        var scripts = document.getElementsByTagName("script");
+        var embedder = scripts[ scripts.length - 1 ];
+        (function (){
+        var appName = encodeURIComponent(window.location.hostname);
+        if(appName==""){appName="local";}
+        var s = document.createElement("script");
+        s.type = "text/javascript";
+        s.async = true;
+        var theUrl = baseUrl+'serve/v1/coin/chart?fsym=BTC&tsym=USD';
+        s.src = theUrl + ( theUrl.indexOf("?") >= 0 ? "&" : "?") + "app=" + appName;
+        embedder.parentNode.appendChild(s);
+        })();
+        </script>
+</div>
+<br>
+{% for post in posts%} 
+<div class="border p-3 mb-3">
+    <img class= "img-fluid rounded-circle border m-2" width="70" 
+    src="resim.png" 
+    alt="resim">
+    <span>{{post.post_date|date:'d/m/Y'}} Tarihinde paylaştı.</span>
     <h3><a class="text-dark" href="{% url 'detail' post.id %}">{{post.title}}</a></h3>
     <p>{{post.content}}</p>
 </div>
