--- a/src/blog/templates/blog/index.html
+++ b/src/blog/templates/blog/index.html
@@ -21,7 +21,7 @@
 {% for post in posts%} 
 <div class="border p-3 mb-3">
     <img class= "img-fluid rounded-circle border m-2" width="70" 
-    src="resim.png" 
+    src="{{user.profile.image.url}}" 
     alt="resim">
     <span>{{post.post_date|date:'d/m/Y'}} Tarihinde paylaştı.</span>
     <h3><a class="text-dark" href="{% url 'detail' post.id %}">{{post.title}}</a></h3>
