--- a/src/blog/templates/blog/index.html
+++ b/src/blog/templates/blog/index.html
@@ -1,31 +1,35 @@
+
 {% extends 'blog/base.html' %}
 {% block content %}
-<div > 
-    <script type="text/javascript">
-        baseUrl = "https://widgets.cryptocompare.com/";
-        var scripts = document.getElementsByTagName("script");
-        var embedder = scripts[ scripts.length - 1 ];
-        (function (){
-        var appName = encodeURIComponent(window.location.hostname);
-        if(appName==""){appName="local";}
-        var s = document.createElement("script");
-        s.type = "text/javascript";
-        s.async = true;
-        var theUrl = baseUrl+'serve/v1/coin/chart?fsym=BTC&tsym=USD';
-        s.src = theUrl + ( theUrl.indexOf("?") >= 0 ? "&" : "?") + "app=" + appName;
-        embedder.parentNode.appendChild(s);
-        })();
-        </script>
+{% if messages %}
+{% for message in messages %}
+<div class="alert alert-{{message.tags}}">
+    {{message}}
 </div>
-<br>
-{% for post in posts%} 
+{% endfor %}
+{% endif %}
+
+<div class="nomics-ticker-widget" data-name="Bitcoin" data-base="BTC"
+ data-quote="USD"></div><script src="https://widget.nomics.com/embed.js"></script>
+
+ <br>
+
+{% for post in posts %}
 <div class="border p-3 mb-3">
-    <img class= "img-fluid rounded-circle border m-2" width="70" 
-    src="{{user.profile.image.url}}" 
-    alt="resim">
-    <span>{{post.post_date|date:'d/m/Y'}} Tarihinde paylaştı.</span>
+    <img class="img-fluid rounded-circle border m-2" style="width: 70px; height:70px;"
+        src="{{post.author.profile.image.url}}" alt="resim ">
+    <span class="text-secondary">{{post.author}} tarafından {{post.post_date|date:'d-m-Y'}} Tarihinde paylaşıldı </span>
     <h3><a class="text-dark" href="{% url 'detail' post.id %}">{{post.title}}</a></h3>
     <p>{{post.content}}</p>
 </div>
-{% endfor %}                 
+{% empty %}
+<div class="border p-3 mb-3">
+    <h3>paylaşım bulunmamaktadır, Hesabınız varsa
+        <a href="{% url 'login' %}">Giriş yapın</a>
+        ilk paylaşımı siz yapın</h3>
+</div>
+{% endfor %}
+
+{% include 'blog/pagination.html' with page=posts %}
+
 {% endblock content %}
